update websocket auth
